--- a/index.html
+++ b/index.html
@@ -3,21 +3,118 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Envision</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav id="navbar-example2" class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="#">Envision</a>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link" href="#one">One</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#two">Two</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#three">Three</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
+        <!--    <ol class="carousel-indicators">-->
+        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+        <!--    </ol>-->
+        <!--    <div class="carousel-inner">-->
+        <!--        <div class="carousel-item active">-->
+        <!--            <img src="/img/envision_land.jpg" class="d-block w-100" alt="this land">-->
+        <!--        </div>-->
+        <!--        <div class="carousel-item">-->
+        <!--            <img src="/img/envision_land1.jpg" class="d-block w-100" alt="this land">-->
+        <!--        </div>-->
+        <!--        <div class="carousel-item">-->
+        <!--            <img src="/img/envision_land2.jpg" class="d-block w-100" alt="this land">-->
+        <!--        </div>-->
+        <!--    </div>-->
+        <!--    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+        <!--        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+        <!--        <span class="sr-only">Previous</span>-->
+        <!--    </a>-->
+        <!--    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+        <!--        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+        <!--        <span class="sr-only">Next</span>-->
+        <!--    </a>-->
+        <!--</div>-->
+        <div id="imageCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#imageCarousel" data-slide-to="1"></li>
+                <li data-target="#imageCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/envision_land.jpg" class="d-block w-100" alt="image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>" Tell us about your experences! "</h5>
+                        <p> - Let's bring this image to life</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="/img/envision_land1.jpg" class="d-block w-100" alt="image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>" Tell us about your experences! "</h5>
+                        <p> - Let's bring this image to life</p>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="/img/envision_land2.jpg" class="d-block w-100" alt="image">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>" Tell us about your experences! "</h5>
+                        <p> - Let's bring this image to life</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+            <h4 id="one">one</h4>
+            <p>...</p>
+            <h4 id="two">two</h4>
+            <p>...</p>
+            <h4 id="three">three</h4>
+            <p>...</p>
+        </div>
+    </main>
+    <footer><strong>Envision&copy</strong> | a template by goldenweb</footer>
+
 </body>
+
+</html>
