--- a/index.html
+++ b/index.html
@@ -16,105 +16,161 @@
 </head>
 
 <body>
-    <header>
-        <nav id="navbar-example2" class="navbar navbar-light bg-light">
-            <a class="navbar-brand" href="#">Envision</a>
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a class="nav-link" href="#one">One</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#two">Two</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#three">Three</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <!--<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">-->
-        <!--    <ol class="carousel-indicators">-->
-        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
-        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
-        <!--        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
-        <!--    </ol>-->
-        <!--    <div class="carousel-inner">-->
-        <!--        <div class="carousel-item active">-->
-        <!--            <img src="/img/envision_land.jpg" class="d-block w-100" alt="this land">-->
-        <!--        </div>-->
-        <!--        <div class="carousel-item">-->
-        <!--            <img src="/img/envision_land1.jpg" class="d-block w-100" alt="this land">-->
-        <!--        </div>-->
-        <!--        <div class="carousel-item">-->
-        <!--            <img src="/img/envision_land2.jpg" class="d-block w-100" alt="this land">-->
-        <!--        </div>-->
-        <!--    </div>-->
-        <!--    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
-        <!--        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-        <!--        <span class="sr-only">Previous</span>-->
-        <!--    </a>-->
-        <!--    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
-        <!--        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-        <!--        <span class="sr-only">Next</span>-->
-        <!--    </a>-->
-        <!--</div>-->
-        <div id="imageCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#imageCarousel" data-slide-to="1"></li>
-                <li data-target="#imageCarousel" data-slide-to="2"></li>
-            </ol>
+    <div class='container-fluid'>
+        <header>
+            <!-- navbar scrollpsy -->
+            <nav id="navbar-example2" class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="#">Envision</a>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#one">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#two">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#three">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <!-- image slider -->
+            <div id="imageCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#imageCarousel" data-slide-to="1"></li>
+                    <li data-target="#imageCarousel" data-slide-to="2"></li>
+                </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/img/envision_land.jpg" class="d-block w-100" alt="image">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>" Tell us about your experences! "</h5>
-                        <p> - Let's bring this image to life</p>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/img/envision_land.jpg" class="d-block w-100" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>" Tell us about your experences! "</h5>
+                            <p> - Let's bring this image to life</p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="/img/envision_land1.jpg" class="d-block w-100" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>" Tell us about your experences! "</h5>
+                            <p> - Let's bring this image to life</p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="/img/envision_land2.jpg" class="d-block w-100" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>" Tell us about your experences! "</h5>
+                            <p> - Let's bring this image to life</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="carousel-item">
-                    <img src="/img/envision_land1.jpg" class="d-block w-100" alt="image">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>" Tell us about your experences! "</h5>
-                        <p> - Let's bring this image to life</p>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="/img/envision_land2.jpg" class="d-block w-100" alt="image">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>" Tell us about your experences! "</h5>
-                        <p> - Let's bring this image to life</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+                <!-- Left and right controls -->
+                <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
-        <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-            <h4 id="one">one</h4>
-            <p>...</p>
-            <h4 id="two">two</h4>
-            <p>...</p>
-            <h4 id="three">three</h4>
-            <p>...</p>
-        </div>
-    </main>
-    <footer><strong>Envision&copy</strong> | a template by goldenweb</footer>
+            </div>
+            <div data-spy="scroll" data-target="#navbar-example2" data-offset="0">
+                <!-- about -->
+                <div id="one">
+                    <div class="row">
+                        <div class="spacer text-center col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <h3>What is Envision?</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, quidam semper deseruisse est at. At vim dolor utroque adipisci. Et nam aeque vivendo. Eu mei etiam putant lobortis, quod velit eu nec. Ea unum cibo his, oportere aliquando ad nec. Probo accusamus mel eu, ad eam prima iriure
+                                invenire. Labitur honestatis mel ea. Zril iriure cum eu, modo labores honestatis ei vel, elit everti vulputate qui ut. Eum te mucius utamur deterruisset. Ea vide fabulas ius.
+                                <div class='p-spacer'></div>
+                                invenire. Labitur honestatis mel ea. Zril iriure cum eu, modo labores honestatis ei vel, elit everti vulputate qui ut. Eum te mucius utamur deterruisset. Ea vide fabulas ius. invenire. Labitur honestatis mel ea. Zril iriure cum eu, modo labores honestatis
+                                ei vel, elit everti vulputate qui ut. Eum te mucius utamur deterruisset. Ea vide fabulas ius.
+                            </p>
+                        </div>
+                    </div>
+                </div>
 
+                <!-- three qualities / services -->
+                <div id="two" class="row">
+                    <div class="notice-box col xs 12 s12 md4 lg4 xl4">
+                        <i class="fas fa-5x fa-check"></i>
+                        <p class='spacer'>The first service we offer is..</p>
+                    </div>
+                    <div class="notice-box col xs12 s12 md4 lg4 xl4">
+                        <i class="fas fa-5x fa-cogs"></i>
+                        <p class='spacer'>The second service we offer is..</p>
+                    </div>
+                    <div class="notice-box col xs12 s12 md4 lg4 xl4">
+                        <i class="fas fa-5x fa-people-carry"></i>
+                        <p class='spacer'>The third service we offer is..</p>
+                    </div>
+
+                    <!-- Booking price cards -->
+                    <div class="card-columns">
+                        <div class='card col col-xs-3'>
+                            <img class='card-img-top' src='/img/placeholder-image.jpg'>
+                            <div class="card-body">
+                                <h5 class="card-title">Private Bookings</h5>
+                                <p class="card-text">
+                                    This item costs €EU.RO.
+                                </p>
+                                <button>Book Now</button>
+                            </div>
+                        </div>
+                        <div class='card col col-xs-3'>
+                            <img class='card-img-top' src='/img/placeholder-image.jpg'>
+                            <div class="card-body">
+                                <h5 class="card-title">Coporate Bookings</h5>
+                                <p class="card-text">
+                                    This item costs €EU.RO.
+                                </p>
+                                <button>Book Now</button>
+                            </div>
+                        </div>
+                        <div class='card col col-xs-3'>
+                            <img class='card-img-top' src='/img/placeholder-image.jpg'>
+                            <div class="card-body">
+                                <h5 class="card-title">Personal Bookings</h5>
+                                <p class="card-text">
+                                    This item costs €EU.RO.
+                                </p>
+                                <button>Book Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row text-center">
+                    <div class="col col-xs-8 col-md-6 col-lg-6 col-xl-6">
+                        <form class='container'>
+                            <div id="three" class="row center-text">
+                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                    <input type="text" class="form-control" placeholder="First name">
+                                </div>
+                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                    <input type="text" class="form-control" placeholder="Last name">
+                                </div>
+                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                    <textarea type="text" class="form-control" placeholder="Your message.."></textarea>
+                                </div>
+                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                    <input type="submit" class="form-control">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+        </main>
+        <footer><strong>Envision&copy</strong> | a template by goldenweb</footer>
+        </div>
 </body>
 
 </html>
