added more scrolling features

--- a/index.html
+++ b/index.html
@@ -99,22 +99,40 @@
                 </div>
 
                 <!-- three qualities / services -->
-                <div id="two" class="row">
-                    <div class="notice-box col xs 12 s12 md4 lg4 xl4">
-                        <i class="fas fa-5x fa-check"></i>
-                        <p class='spacer'>The first service we offer is..</p>
+                <div id="two">
+                    <div class="row">
+                        <div class="col">
+                            <div class="row justify-content-center">
+                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                    <i class="fas fa-5x fa-check"></i>
+                                    <p class='spacer'>The first service we offer is..</p>
+                                </div>
+                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                    <i class="fas fa-5x fa-cogs"></i>
+                                    <p class='spacer'>The second service we offer is..</p>
+                                </div>
+                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                    <i class="fas fa-5x fa-people-carry"></i>
+                                    <p class='spacer'>The third service we offer is..</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="notice-box col xs12 s12 md4 lg4 xl4">
-                        <i class="fas fa-5x fa-cogs"></i>
-                        <p class='spacer'>The second service we offer is..</p>
-                    </div>
-                    <div class="notice-box col xs12 s12 md4 lg4 xl4">
-                        <i class="fas fa-5x fa-people-carry"></i>
-                        <p class='spacer'>The third service we offer is..</p>
+
+                    <!-- spacer image -->
+                    <div class="row">
+                        <div class="col col-md-12 col-lg-12 col-xl-12">
+                            <div class="row">
+                                <div class="col spacer-image">
+                                    <p class="text-center">This line encaptures an essence of my business...
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Booking price cards -->
-                    <div class="card-columns">
+                    <div class="card-columns spacer">
                         <div class='card col col-xs-3'>
                             <img class='card-img-top' src='/img/placeholder-image.jpg'>
                             <div class="card-body">
@@ -147,7 +165,7 @@
                         </div>
                     </div>
                 </div>
-
+                <!-- booking form -->
                 <div class="row text-center">
                     <div class="col col-xs-8 col-md-6 col-lg-6 col-xl-6">
                         <form class='container'>
