added form styling

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <!-- booking form -->
-                <div class="row text-center">
+                <div class="row text-center justify-content-center blue-background">
                     <div class="col col-xs-8 col-md-6 col-lg-6 col-xl-6">
                         <form class='container'>
                             <div id="three" class="row center-text">
