fixed dodgy grid width at xs size

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- about -->
                 <div id="one">
                     <div class="row">
-                        <div class="spacer text-center col col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="spacer text-center col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                             <h3>What is Envision?</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, quidam semper deseruisse est at. At vim dolor utroque adipisci. Et nam aeque vivendo. Eu mei etiam putant lobortis, quod velit eu nec. Ea unum cibo his, oportere aliquando ad nec. Probo accusamus mel eu, ad eam prima iriure
@@ -103,15 +103,15 @@
                     <div class="row">
                         <div class="col">
                             <div class="row justify-content-center">
-                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                <div class="col col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
                                     <i class="fas fa-5x fa-check"></i>
                                     <p class='spacer'>The first service we offer is..</p>
                                 </div>
-                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                <div class="col col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
                                     <i class="fas fa-5x fa-cogs"></i>
                                     <p class='spacer'>The second service we offer is..</p>
                                 </div>
-                                <div class="col col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
+                                <div class="col col-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 notice-box ">
                                     <i class="fas fa-5x fa-people-carry"></i>
                                     <p class='spacer'>The third service we offer is..</p>
                                 </div>
@@ -133,7 +133,7 @@
 
                     <!-- Booking price cards -->
                     <div class="card-columns spacer">
-                        <div class='card col col-xs-3'>
+                        <div class='card col col-12'>
                             <img class='card-img-top' src='/img/placeholder-image.jpg'>
                             <div class="card-body">
                                 <h5 class="card-title">Private Bookings</h5>
@@ -143,7 +143,7 @@
                                 <button>Book Now</button>
                             </div>
                         </div>
-                        <div class='card col col-xs-3'>
+                        <div class='card col col-12'>
                             <img class='card-img-top' src='/img/placeholder-image.jpg'>
                             <div class="card-body">
                                 <h5 class="card-title">Coporate Bookings</h5>
@@ -153,7 +153,7 @@
                                 <button>Book Now</button>
                             </div>
                         </div>
-                        <div class='card col col-xs-3'>
+                        <div class='card col col-12'>
                             <img class='card-img-top' src='/img/placeholder-image.jpg'>
                             <div class="card-body">
                                 <h5 class="card-title">Personal Bookings</h5>
@@ -167,19 +167,19 @@
                 </div>
                 <!-- booking form -->
                 <div class="row text-center justify-content-center blue-background">
-                    <div class="col col-xs-8 col-md-6 col-lg-6 col-xl-6">
+                    <div class="col col-8 col-md-6 col-lg-6 col-xl-6">
                         <form class='container'>
                             <div id="three" class="row center-text">
-                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                <div class="col col-12 col-md-12 col-lg-12 col-xl-12">
                                     <input type="text" class="form-control" placeholder="First name">
                                 </div>
-                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                <div class="col col-12 col-md-12 col-lg-12 col-xl-12">
                                     <input type="text" class="form-control" placeholder="Last name">
                                 </div>
-                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                <div class="col col-12 col-md-12 col-lg-12 col-xl-12">
                                     <textarea type="text" class="form-control" placeholder="Your message.."></textarea>
                                 </div>
-                                <div class="col col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                                <div class="col col-12 col-md-12 col-lg-12 col-xl-12">
                                     <input type="submit" class="form-control">
                                 </div>
                             </div>
